Updates to queue_test -- currentyl broken

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 
 CC := g++-6
+CLANG := clang++
 
 CSTD := -std=c++14
 CFLAGS := -Wall -pedantic
@@ -8,3 +9,8 @@ CFLAGS := -Wall -pedantic
 .PHONY: tests
 tests:
 	$(CC) $(CSTD) $(CFLAGS) queue_test.cc
+
+.PHONY: debug
+debug:
+	$(CLANG) $(CSTD) $(CFLAGS) -g queue_test.cc
+
