Pushing bug fixes in CUDA code before removing all std::vector implementatinos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(HEADERS
             include/edsdca/util/datetime.h
             include/edsdca/util/math_utils.h
             include/edsdca/models/sdca.h
+            include/edsdca/memory/memsync.h
             include/edsdca/loss/loss.h
             include/edsdca/loss/hingeloss.h)
 
