--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ if (${CUDA_FOUND} AND NOT ${CPU_ONLY})
   add_definitions(-DGPU)
   list(APPEND CUDA_NVCC_FLAGS "-std=c++11")
   list(APPEND CUDA_NVCC_FLAGS "-DGPU")
+  list(APPEND CUDA_NVCC_FLAGS "--expt-relaxed-constexpr")
+  list(APPEND CUDA_NVCC_FLAGS "-Wno-deprecated-gpu-targets")
 else()
   add_definitions(-DCPU)
 endif()
